fix(css): Align hidden checkbox size with styled checkbox (close #24)

--- a/public/css/components/input.css
+++ b/public/css/components/input.css
@@ -27,6 +27,8 @@
 /* Checkbox */
 
 .Input--checkbox {
+	--size: 1.625rem;
+
 	display: flex;
 }
 
@@ -39,8 +41,6 @@
 }
 
 .Input--checkbox label::before {
-	--size: 1.5rem;
-
 	background: var(--background);
 	block-size: var(--size);
 	border: var(--border-interactive);
@@ -49,7 +49,7 @@
 	content: "";
 	font-size: 1.75rem;
 	inline-size: var(--size);
-	line-height: 0.8;
+	line-height: calc(var(--size) * 0.8);
 	text-align: center;
 }
 
@@ -62,7 +62,15 @@
 	content: "×";
 }
 
+@supports (content: "" / "") {
+	.Input--checkbox input:checked + label::before {
+		content: "×" / "";
+	}
+}
+
 .Input--checkbox input {
+	block-size: var(--size);
+	inline-size: var(--size);
 	opacity: 0.01;
 	position: absolute;
 }
